manifest.json updated

--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,7 @@
 	"name": "Devtools console enabler",
 	"version": "1.0.0",
 	"minAppVersion": "0.15.0",
-	"description": "A plugin that helps ...",
+	"description": "A plugin that makes opening the Developer Tool Console more flexible and customizable.",
 	"author": "Alexey Sedoykin",
 	"authorUrl": "https://www.linkedin.com/in/sedoykin",
 	"isDesktopOnly": true
