--- a/manifest.json
+++ b/manifest.json
@@ -1,9 +1,9 @@
 {
-	"id": "devtools-console-221024",
+	"id": "devtools-console-activator",
 	"name": "Devtools console enabler",
 	"version": "1.0.0",
 	"minAppVersion": "0.15.0",
-	"description": "A plugin that makes opening the Developer Tool Console more flexible and customizable.",
+	"description": "Activating the developer console in any situation, even if, for some reason, the standard keyboard shortcut doesn’t work.",
 	"author": "Alexey Sedoykin",
 	"authorUrl": "https://www.linkedin.com/in/sedoykin",
 	"isDesktopOnly": true
