--- a/package.json
+++ b/package.json
@@ -1,12 +1,15 @@
 {
-	"name": "obsidian-sample-plugin",
+	"name": "obsidian-dev-console-plugin",
 	"version": "1.0.0",
-	"description": "This is a sample plugin for Obsidian (https://obsidian.md)",
+	"description": "Activating the developer console in any situation, even if, for some reason, the standard keyboard shortcut doesn’t work.",
 	"main": "main.js",
 	"scripts": {
 		"dev": "node esbuild.config.mjs",
 		"build": "tsc -noEmit -skipLibCheck && node esbuild.config.mjs production",
-		"version": "node version-bump.mjs && git add manifest.json versions.json"
+		"version": "node version-bump.mjs && git add manifest.json versions.json",
+		"copy-plugin": "rsync -a --delete ./ \"/Users/doykin/_ObsidianDevMode_/.obsidian/plugins/$npm_package_name/\"",
+		"dev-in-plugin": "cd \"/Users/doykin/_ObsidianDevMode_/.obsidian/plugins/$npm_package_name/\" && npm run dev",
+		"dev:copy": "npm run copy-plugin && npm run dev-in-plugin"
 	},
 	"keywords": [],
 	"author": "",
